<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cosa_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/headerTotalCosas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerTotalCosas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerTotalCosas"
        app:layout_constraintBottom_toTopOf="@+id/totalCosasTextView"
        app:layout_constraintEnd_toStartOf="@+id/headerSumaTotalPrecios"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/headerSumaTotalPrecios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerSumaPrecios"
        app:layout_constraintBottom_toTopOf="@+id/sumaTotalPreciosTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/headerTotalCosas" />

    <TextView
        android:id="@+id/totalCosasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/labelNumeroCosas"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/headerTotalCosas" />

    <TextView
        android:id="@+id/sumaTotalPreciosTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/labelSumaPrecios"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/headerSumaTotalPrecios" />

</androidx.constraintlayout.widget.ConstraintLayout>

